# iHomeNerd

./: .dockerignore  .gitignore  PR_BODY.md  README.md  docker-compose.gpu.yml  docker-compose.yml  get-ihomenerd.sh  install-ihomenerd-macos.sh
RoadNerd/: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: asr.py  capabilities.py  certs.py  cli.py  config.py  discovery.py  docstore.py  journal.py  llm.py  main.py  nodes.py  ollama.py  persistence.py  rules.py  sessions.py  tts.py  vision.py
backend/app/domains/: agents.py  builder.py  control_plane.py  docs.py  investigate.py  language.py  persistence_router.py  rules_router.py  vision_router.py
backend/app/plugins/: pronunco.py  pronunco_persistence.py
backend/app/templates/: setup.html
backend/seed-rules/healthcare/: plan-selector.rules.json
backend/seed-rules/medicare/: enrollment-windows.rules.json
backend/seed-rules/tax/: filing-method.rules.json
backend/tests/: test_bootstrap_routes.py  test_bootstrap_trust_e2e.py  test_chat_contract.py  test_contract_api.py  test_cross_platform_contract.py  test_investigate_api.py  test_ios_cert_contract.py  test_language_api.py  test_llm_provider.py  test_persistence_api.py  test_pronunco_api.py  test_vision_api.py
docs/: ANDROID_BUILD_HOST_IMAC_MACOS_2026-04-28.md  ANDROID_LITERT_LM_MIGRATION_CHECKLIST_2026-04-26.md  ANDROID_REAL_DEVICE_HANDOFF_2026-04-24.md  APPLE_SILICON_MLX_PIVOT_2026-05-01.md  APPLE_SILICON_NATIVE_MLX_HOSTING_2026-05-01.md  ARCHITECTURE_NODE_PARITY.md  CLASS_AND_TAKE_HOME_FLOW_2026-04-24.md  DEEPSEEK_TESTING_KICKOFF_2026-04-28.md  (+29 more)
(+289 files in other folders)
